1.4.2: fix multi-method execution with isolated Eclipse classloaders